syntax = "proto3";

option java_package = "com.aryanmishra.crypstocks";
option java_multiple_files = true;

message Settings {
  optional ChartRangeProto chart_range = 1;
  optional bool is_dark_mode = 2;
  optional bool show_relevant_news = 3;
  optional bool only_search_stocks = 4;

  enum ChartRangeProto {
    ONE_WEEK = 0;
    ONE_MONTH = 1;
    THREE_MONTHS = 2;
    ONE_YEAR = 3;
  }
}